stat_svc v.03